hakyunghahm/week03/service-mesh-lab/k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: service-a:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          env:
            - name: B_URL
              value: "http://service-b:8081"
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
    - port: 8080
      targetPort: 8080
